--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#">
         <h2>Cui'zine</h2>
       </a>
@@ -35,10 +35,10 @@
           </li>
     </nav>
     
-    <div class="container">
+    <div class="container mt-5 p-5">
       <div class="row">
-        <div class="col-12">
-          <img src="./img/logo_square_white.png" alt="Image de couverts" />
+        <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+          <img class="logo" src="./img/logo_square_white.png" alt="Image de couverts" />
           <h1>Cui'zine</h1>
           <h2>Le mag cuisine</h2>
         </div>
