--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <a class="navbar-brand" href="#">
         <h2>Cui'zine</h2>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -34,7 +35,7 @@
             <a class="nav-link" href="#">Contact</a>
           </li>
     </nav>
-    
+
     <div class="container mt-5 p-5">
       <div class="row">
         <div class="col-12 d-flex flex-column justify-content-center align-items-center">
@@ -46,8 +47,64 @@
     </div>
   </header>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+  <div class="jumbotron">
+    <div class="container">
+      <div class="row">
+        <h5>Derniers articles</h5>
+      </div>
+
+      <div class="row">
+        <div>
+          <img src="./img/articles/suzette/suzette-small.jpg" alt="Pancakes au chocolat" />
+        </div>
+        <div>
+          <h3>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h3>
+          <p>
+            La franchise "Chez Suzette" qui fait un carton chez les Bretons ouvre son premier restaurant à Paris dans
+            le quartier latin. Antoine de Cui'zine a testé pour vous les saveurs sucrées, salées au froment ou au
+            sarrazin !
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div>
+          <img src="./img/articles/metro/metro-small.jpg" alt="Verrine aux framboises" />
+        </div>
+        <div>
+          <h3>Le Métro dessert</h3>
+          <p>
+            Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont décidé de réunir leur
+            deux passions dans un restaurant à la déco inspiré du métro parisien. A voir absolument, mais qu'en est-il
+            d'y aller pour manger ? Clémentine entre en gare et nous donne son avis.
+          </p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div>
+          <img src="./img/articles/vitaly/vitaly-small.jpg" alt="Farfalles au pesto et tomates" />
+        </div>
+        <div>
+          <h3>Vitaly, le végan italien</h3>
+          <p>
+            Quand on pense italien, on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de l'Italie à
+            portée des herbivores. Cette fois, c'est moi Tony qui vais le tester pour vous.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      
+    </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
 
 </body>
 
