--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
     </nav>
 
-    <div class="container mt-5 p-5">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12 d-flex flex-column justify-content-center align-items-center">
           <img class="logo" src="./img/logo_square_white.png" alt="Image de couverts" />
@@ -47,64 +47,104 @@
     </div>
   </header>
 
-  <div class="jumbotron">
-    <div class="container">
-      <div class="row">
-        <h5>Derniers articles</h5>
-      </div>
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <h2>Derniers articles</h2>
+    </div>
 
-      <div class="row">
-        <div>
-          <img src="./img/articles/suzette/suzette-small.jpg" alt="Pancakes au chocolat" />
-        </div>
-        <div>
-          <h3>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h3>
-          <p>
-            La franchise "Chez Suzette" qui fait un carton chez les Bretons ouvre son premier restaurant à Paris dans
-            le quartier latin. Antoine de Cui'zine a testé pour vous les saveurs sucrées, salées au froment ou au
-            sarrazin !
-          </p>
-        </div>
+    <div class="row">
+      <div class="col-12">
+        <img src="./img/articles/suzette/suzette-small.jpg" alt="Pancakes au chocolat" /> 
       </div>
-
-      <div class="row">
-        <div>
-          <img src="./img/articles/metro/metro-small.jpg" alt="Verrine aux framboises" />
-        </div>
-        <div>
-          <h3>Le Métro dessert</h3>
-          <p>
-            Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont décidé de réunir leur
-            deux passions dans un restaurant à la déco inspiré du métro parisien. A voir absolument, mais qu'en est-il
-            d'y aller pour manger ? Clémentine entre en gare et nous donne son avis.
-          </p>
-        </div>
+      <div class="col-12">
+        <h3>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h3>
+        <p>
+          La franchise "Chez Suzette" qui fait un carton chez les Bretons ouvre son premier restaurant à Paris dans
+          le quartier latin. Antoine de Cui'zine a testé pour vous les saveurs sucrées, salées au froment ou au
+          sarrazin !
+        </p>
       </div>
+    </div>
 
+    <div class="row">
+      <div class="col-12">
+        <img src="./img/articles/metro/metro-small.jpg" alt="Dessert aux framboises" />
+      </div>
+      <div class="col-12">
+        <h3>Le Métro dessert</h3>
+        <p>
+          Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont décidé de réunir leur
+          deux passions dans un restaurant à la déco inspiré du métro parisien. A voir absolument, mais qu'en est-il
+          d'y aller pour manger ? Clémentine entre en gare et nous donne son avis.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+        <img src="./img/articles/vitaly/vitaly-small.jpg" alt="Farfalles au pesto et tomates" />
+      </div>
+      <div class="col-12">
+        <h3>Vitaly, le végan italien</h3>
+        <p>
+          Quand on pense italien, on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de l'Italie à
+          portée des herbivores. Cette fois, c'est moi Tony qui vais le tester pour vous.
+        </p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+        <a href="">&laquo;voir les articles précédents</a>
+      </div>
+    </div>
+
+    <div class="container-fluid bg-dark text-white">
       <div class="row">
-        <div>
-          <img src="./img/articles/vitaly/vitaly-small.jpg" alt="Farfalles au pesto et tomates" />
+        <div class="col-12">
+          <h3>Catégories</h3>
+          <ul>
+            <li><a href="">Revues</a></li>
+            <li><a href=""></a>Recettes</li>
+            <li><a href=""></a>Découvertes</li>
+          </ul>
         </div>
-        <div>
-          <h3>Vitaly, le végan italien</h3>
-          <p>
-            Quand on pense italien, on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de l'Italie à
-            portée des herbivores. Cette fois, c'est moi Tony qui vais le tester pour vous.
-          </p>
+
+        <div class="col-12">
+          <h3>Archives</h3>
+          <ul>
+            <li><a href="">2019</a></li>
+            <li><a href=""></a>2018</li>
+            <li><a href=""></a>2017</li>
+          </ul>
+        </div>
+
+        <div class="col-12">
+          <h3>Newsletter</h3>
+          <form class="form-inline">
+            <div class="form-group">
+              <input type="email" class="form-control" placeholder="Email">
+            </div>
+            <button id="" type="" class="" >S'inscrire</button>
+          </form>
+        </div>
+
+        <div class="col-12">
+          <h3>Partager</h3>
+          <li><a href=""> <!-- icônes réseaux sociaux --> </a></li>
+          <li><a href=""> <!-- icônes réseaux sociaux --> </a></li>
+          <li><a href=""> <!-- icônes réseaux sociaux --> </a></li>
+          <li><a href=""> <!-- icônes réseaux sociaux --> </a></li>
         </div>
       </div>
     </div>
 
-    <footer>
-      
-    </footer>
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"></script>
 
 </body>
 
