--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css?family=Courgette|Oswald:200,400" rel="stylesheet" />
+  <link rel="stylesheet" href="./css/all.css" />
   <link rel="stylesheet" href="./css/bootstrap.css" />
   <link rel="stylesheet" href="./css/homepage.css" />
   <link rel="stylesheet" href="./css/main.css" />
@@ -18,8 +19,8 @@
       <a class="navbar-brand" href="./index.html">
         <h2>Cui'zine</h2>
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarText">
@@ -40,27 +41,30 @@
 
     <!-- /nav -->
 
-    <header class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <img class="logo" src="./img/logo_square_white.png" alt="Image de couverts" />
-          <h1>Cui'zine</h1>
-          <h2>Le mag cuisine</h2>
+    <header>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <img class="logo" src="./img/logo_square_white.png" alt="Image de couverts" />
+            <h1>Cui'zine</h1>
+            <h2>Le mag cuisine</h2>
+          </div>
         </div>
       </div>
     </header>
   </div>
 
-  <div class="container-fluid">
+  <div class="container-fluid content">
     <div class="row justify-content-center">
       <h2>Derniers articles</h2>
     </div>
-
-    <div class="row">
-      <div class="col-12 col-md-4">
-        <img src="./img/articles/suzette/suzette-small.jpg" alt="Pancakes au chocolat" />
+    <!--  img col-md-4 -->
+    <!--  text col-md-8 -->
+    <article class="row">
+      <div class="col-12">
+        <img src="./img/articles/suzette/suzette-small.jpg" class="img-fluid" alt="Pancakes au chocolat" />
       </div>
-      <div class="col-12 col-md-8">
+      <div class="col-12">
         <h3>Chez Suzette, la nouvelle crêperie qui fait parler d'elle</h3>
         <p>
           La franchise "Chez Suzette" qui fait un carton chez les Bretons ouvre son premier restaurant à Paris dans
@@ -68,13 +72,13 @@
           sarrazin !
         </p>
       </div>
-    </div>
+    </article>
 
-    <div class="row">
-      <div class="col-12 col-md-4">
-        <img src="./img/articles/metro/metro-small.jpg" alt="Dessert aux framboises" />
+    <article class="row">
+      <div class="col-12">
+        <img src="./img/articles/metro/metro-small.jpg" class="img-fluid" alt="Dessert aux framboises" />
       </div>
-      <div class="col-12 col-md-8">
+      <div class="col-12">
         <h3>Le Métro dessert</h3>
         <p>
           Germain est ferrovipathe (ndlr: fan de train), son fils Maxime est pâtissier. Ils ont décidé de réunir leur
@@ -82,77 +86,97 @@
           d'y aller pour manger ? Clémentine entre en gare et nous donne son avis.
         </p>
       </div>
-    </div>
+    </article>
 
-    <div class="row">
-      <div class="col-12 col-md-4">
-        <img src="./img/articles/vitaly/vitaly-small.jpg" alt="Farfalles au pesto et tomates" />
+    <article class="row">
+      <div class="col-12">
+        <img src="./img/articles/vitaly/vitaly-small.jpg" class="img-fluid" alt="Farfalle au pesto et tomates" />
       </div>
-      <div class="col-12 col-md-8">
+      <div class="col-12">
         <h3>Vitaly, le végan italien</h3>
         <p>
           Quand on pense italien, on pense lasagne et jambon de Parme. Ils l'ont fait, les saveurs de l'Italie à
           portée des herbivores. Cette fois, c'est moi Tony qui vais le tester pour vous.
         </p>
       </div>
-    </div>
+    </article>
+
+    <!-- /article -->
 
     <div class="row">
       <div class="col-12">
-        <a href="">&laquo;voir les articles précédents</a>
+        <a href="page2.html">&laquo; Voir les articles précédents</a>
       </div>
     </div>
+  </div>
 
-    <div id="footer" class="container-fluid text-white">
+  <footer>
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
           <h3>Catégories</h3>
           <ul>
-            <li><a href="">Revues</a></li>
-            <li><a href=""></a>Recettes</li>
-            <li><a href=""></a>Découvertes</li>
+            <li><a href="#">Revues</a></li>
+            <li><a href="#">Recettes</a></li>
+            <li><a href="#">Découvertes</a></li>
           </ul>
         </div>
 
         <div class="col-12">
           <h3>Archives</h3>
           <ul>
-            <li><a href="">2019</a></li>
-            <li><a href="">2018</a></li>
-            <li><a href="">2017</a></li>
+            <li><a href="#">2019</a></li>
+            <li><a href="#">2018</a></li>
+            <li><a href="#">2017</a></li>
           </ul>
         </div>
 
         <div class="col-12">
-          <h3>Newsletter</h3>
+          <h5>Newsletter</h5>
           <form class="form-inline">
             <div class="form-group">
-              <input type="email" class="form-control" placeholder="Email">
+              <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email">
             </div>
             <button type="submit" class="btn btn-primary">S'inscrire</button>
           </form>
         </div>
 
         <div class="col-12">
-          <h3>Partager</h3>
-          <li><a href="">
-              <!-- icônes réseaux sociaux --> </a></li>
-          <li><a href="">
-              <!-- icônes réseaux sociaux --> </a></li>
-          <li><a href="">
-              <!-- icônes réseaux sociaux --> </a></li>
-          <li><a href="">
-              <!-- icônes réseaux sociaux --> </a></li>
+          <h5>Partager</h5>
+          <ul>
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
+  </footer>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"></script>
+  <!-- /footer -->
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
 
 </body>
 
