--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="col-12">
           <h5>Newsletter</h5>
           <form class="form-inline">
-            <div class="form-group">
+            <div>
               <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Email">
             </div>
             <button type="submit" class="btn btn-primary">S'inscrire</button>
